[workspace]
members = [
  "damn-core",
  "damn-bin",
]
default-members = [
  "damn-bin"
]
resolver = "2"


[workspace.package]
version = "0.1.2"
description = "An XMPP client that makes you say damn!"
authors = ["Crispy Strawberry"]
edition = "2021"
license = "Apache-2.0 OR MIT"


[workspace.dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net"] }
