[package]
name = "damn"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
damn-core = { path = "../damn-core", version = "0.1.2"}
