[package]
name = "damn-core"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-resolver = "0.24.0"
tokio.workspace = true
